add missing devices and change colors

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -2,3 +2,15 @@
     background-color: #002060 !important;
     color: #fff !important;
 }
+.bg-info {
+    background-color: #002060 !important;
+    color: #fff !important;
+}
+.bg-success {
+    background-color: #92D050 !important;
+    color: #fff !important;
+}
+.bg-warning {
+    background-color: #FF8805 !important;
+    color: #fff !important;
+}
