Fix min websockets server. https

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -30,3 +30,8 @@
 .text-grey {
     color: #DBDBDB !important;
 }
+.no-word-cut {
+    word-break: normal !important;
+    overflow-wrap: normal !important;
+    white-space: normal !important;
+}
